src/snapshots/afrotd__parser__tests__interpretation_html_3.5.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.5.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            A3, ein einwechselnder Ersatzspieler betritt das Huddle oder nimmt
            eine Position in einer Formation ein und: (a) nach ungefähr zwei
            Sekunden verlässt A34 das Huddle und das Spielfeld an seiner
            Seitenlinie oder (b) nach ungefähr vier Sekunden verlässt A34 das
            Huddle und das Spielfeld an seiner Seitenlinie.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Legal. (b) Foul (Beachte: Ein ausgewechselter Spieler, der
                innerhalb von drei Sekunden das Huddle verlässt, wird so
                behandelt, als hätte er es sofort verlassen.).
            </p>
        </details>
    </div>
</article>
