src/snapshots/afrotd__parser__tests__interpretation_html_3.5.3_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.5.3.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A befindet sich mit elf Spielern im Huddle, als sich A27 dem
            Huddle nähert (innerhalb von 10 Metern), während dieses sich
            auflöst.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul. Strafe – 5 Meter vom Succeeding Spot (Regel
                2.27.9.a).
            </p>
        </details>
    </div>
</article>
